# telephony_ril_adapter

./: 399.diff  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  ohos.build
frameworks/: BUILD.gn
frameworks/src/: hril_base_parcel.cpp  hril_call_parcel.cpp  hril_data_parcel.cpp  hril_modem_parcel.cpp  hril_network_parcel.cpp  hril_sim_parcel.cpp  hril_sms_parcel.cpp
hril/: BUILD.gn  hril_base.cpp  hril_call.cpp  hril_call_parcel.cpp  hril_data.cpp  hril_data_parcel.cpp  hril_manager.cpp  hril_modem.cpp  hril_modem_parcel.cpp  hril_network.cpp  hril_network_parcel.cpp  hril_sim.cpp  hril_sim_parcel.cpp  hril_sms.cpp  hril_sms_parcel.cpp
hril_hdf/: BUILD.gn  hril_hdf.c
include/: hril_base.h  hril_call.h  hril_data.h  hril_hdf.h  hril_manager.h  hril_modem.h  hril_network.h  hril_sim.h  hril_sms.h
interfaces/innerkits/: BUILD.gn  hril.h  hril_call_parcel.h  hril_data_parcel.h  hril_modem_parcel.h  hril_network_parcel.h  hril_notification.h  hril_request.h  hril_sim_parcel.h  hril_sms_parcel.h  hril_types.h
interfaces/innerkits/include/: hril.h  hril_base_parcel.h  hril_call_parcel.h  hril_data_parcel.h  hril_enum.h  hril_modem_parcel.h  hril_network_parcel.h  hril_notification.h  hril_public_struct.h  hril_request.h  hril_sim_parcel.h  hril_sms_parcel.h  hril_types.h  hril_vendor_call_defs.h  hril_vendor_data_defs.h  hril_vendor_modem_defs.h  hril_vendor_network_defs.h  hril_vendor_sim_defs.h  hril_vendor_sms_defs.h
services/hril/: BUILD.gn  libhril.versionscript
services/hril/include/: hril_base.h  hril_call.h  hril_data.h  hril_event.h  hril_event_map.h  hril_hdf.h  hril_manager.h  hril_modem.h  hril_network.h  hril_notification_map.h  hril_request_map.h  hril_sim.h  hril_sms.h  hril_timer_callback.h  modem_config.h
services/hril/src/: hril_base.cpp  hril_call.cpp  hril_data.cpp  hril_event.cpp  hril_manager.cpp  hril_modem.cpp  hril_network.cpp  hril_sim.cpp  hril_sms.cpp  hril_timer_callback.cpp
services/hril_hdf/: BUILD.gn  hril_hdf.c  libhril_hdf.versionscript
services/hril_hdf/include/: hril_hdf.h  modem_adapter.h
services/hril_hdf/src/: hril_hdf.c
test/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/callemergencynotice_fuzzer/: BUILD.gn  callemergencynotice_fuzzer.cpp  callemergencynotice_fuzzer.h
test/fuzztest/callussdnotice_fuzzer/: BUILD.gn  callussdnotice_fuzzer.cpp  callussdnotice_fuzzer.h
test/fuzztest/callussdnotice_fuzzer/corpus/: init
test/fuzztest/createcdmasms_fuzzer/: BUILD.gn  createcdmasms_fuzzer.cpp  createcdmasms_fuzzer.h
test/fuzztest/createcdmasms_fuzzer/corpus/: init
test/fuzztest/newsmsnotify_fuzzer/: BUILD.gn  newsmsnotify_fuzzer.cpp  newsmsnotify_fuzzer.h
test/fuzztest/newsmsnotify_fuzzer/corpus/: init
test/fuzztest/pdpcontextlistupdated_fuzzer/: BUILD.gn  pdpcontextlistupdated_fuzzer.cpp  pdpcontextlistupdated_fuzzer.h
test/fuzztest/residentnetworkupdated_fuzzer/: BUILD.gn  residentnetworkupdated_fuzzer.cpp  residentnetworkupdated_fuzzer.h
test/fuzztest/residentnetworkupdated_fuzzer/corpus/: init
test/fuzztest/simstkproactivenotify_fuzzer/: BUILD.gn  simstkproactivenotify_fuzzer.cpp  simstkproactivenotify_fuzzer.h
test/mock/: BUILD.gn
test/unittest/: BUILD.gn  ril_callback_test.cpp  ril_interface_test.cpp  ril_manager_test.cpp  ril_radio_indication_test.cpp  ril_radio_response_test.cpp  ril_unit_test.cpp
test/unittest/include/: ril_callback_test.h  ril_data_profile_test.h  ril_interface_test.h  ril_manager_test.h  ril_radio_indication_test.h  ril_radio_response_test.h  ril_unit_test.h
test/unittest/ril_adapter_gtest/: BUILD.gn  ril_adapter_service_test.cpp  ril_adapter_unit_test.cpp  ril_call_test.cpp  ril_callback_test.cpp  ril_data_test.cpp  ril_interface_test.cpp  ril_manager_test.cpp  ril_modem_test.cpp  ril_network_test.cpp  ril_radio_indication_test.cpp  ril_radio_response_test.cpp  ril_sim_test.cpp  ril_sms_test.cpp  ril_test_util.cpp  ril_unit_test.cpp  zero_branch_test.cpp
test/unittest/ril_adapter_gtest/include/: ril_adapter_unit_test.h  ril_call_test.h  ril_callback_hdiid.h  ril_callback_test.h  ril_data_profile_test.h  ril_data_test.h  ril_interface_test.h  ril_manager_test.h  ril_modem_test.h  ril_network_test.h  ril_radio_indication_test.h  ril_radio_response_test.h  ril_sim_test.h  ril_sms_test.h  ril_test_util.h  ril_unit_test.h
utils/: BUILD.gn
utils/native/include/: desensitize_string_stream.h  telephony_log_c.h  telephony_log_wrapper.h
