# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

#group("tel_hal_manager") {

RIL_ADAPTER = "//base/telephony"

ohos_shared_library("hril_hdf") {
  sources = [ "hril_hdf.c" ]
  include_dirs = [
    "$RIL_ADAPTER/ril_adapter/include",
    "//drivers/adapter/uhdf2/include/hdi",
    "$RIL_ADAPTER/include",
    "$RIL_ADAPTER/ril_adapter/interfaces/innerkits",
    "include",
  ]
  deps = [
    "$RIL_ADAPTER/ril_adapter/hril:hril",
    "//base/hiviewdfx/faultloggerd/interfaces/innerkits/signal_handler:dfx_signalhandler",
    "//base/telephony/core_service/common:libtelephony_common",
    "//drivers/adapter/uhdf2/host:libhdf_host",
    "//drivers/adapter/uhdf2/ipc:libhdf_ipc_adapter",
    "//drivers/adapter/uhdf2/osal:libhdf_utils",
    "//utils/native/base:utils",
  ]

  if (is_standard_system) {
    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }

  part_name = "ril_adapter"
  subsystem_name = "telephony"
}
