# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

ohos_shared_library("hril_hdf") {
  defines = [
    "LOG_TAG = \"RilAdapterInit\"",
    "LOG_DOMAIN = 0xD002B01",
  ]

  sources = [ "hril_hdf.c" ]

  include_dirs = [
    "//base/telephony/ril_adapter/services/hril/include",
    "include",
  ]

  deps = [
    "//base/hiviewdfx/faultloggerd/interfaces/innerkits/signal_handler:dfx_signalhandler",
    "//base/telephony/ril_adapter/frameworks:hril_innerkits",
    "//base/telephony/ril_adapter/services/hril:hril",
    "//third_party/eudev:libudev",
  ]

  external_deps = [
    "core_service:libtel_common",
    "device_driver_framework:libhdf_host",
    "device_driver_framework:libhdf_ipc_adapter",
    "device_driver_framework:libhdf_utils",
    "device_driver_framework:libhdi",
    "startup_l2:syspara",
    "utils_base:utils",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "ril_adapter"
  subsystem_name = "telephony"
}
