# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

RIL_ADAPTER = "../.."
HRIL_HDF_ROOT = "$RIL_ADAPTER/services/hril_hdf"

config("ril_hril_hdf_config") {
  include_dirs = [ "$RIL_ADAPTER/services/hril_hdf/include" ]
}

ohos_shared_library("hril_hdf") {
  sources = [ "$HRIL_HDF_ROOT/src/hril_hdf.c" ]

  version_script = "$HRIL_HDF_ROOT/libhril_hdf.versionscript"

  public_configs = [ ":ril_hril_hdf_config" ]

  configs = [ "$RIL_ADAPTER/utils:utils_config" ]

  deps = [
    "$RIL_ADAPTER/interfaces/innerkits:hril_innerkits",
    "$RIL_ADAPTER/services/hril:hril",
  ]

  external_deps = [
    "hdf_core:libhdf_host",
    "hdf_core:libhdf_utils",
    "hilog:libhilog",
    "init:libbegetutil",
  ]

  defines = [
    "LOG_TAG = \"HrilHdf\"",
    "LOG_DOMAIN = 0xD001F08",
  ]

  install_images = [ chipset_base_dir ]
  part_name = "ril_adapter"
  subsystem_name = "telephony"
}
