# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#import("//build/test.gni")
import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")
RIL_ADAPTER = "//base/telephony"

ohos_executable("ril_adapter_test") {
  install_enable = true
  sources = [
    "ril_manager_test.cpp",
    "ril_radio_indication_test.cpp",
    "ril_radio_response_test.cpp",
    "ril_unit_test.cpp",
  ]
  include_dirs = [
    "$RIL_ADAPTER/ril_adapter/include",
    "$RIL_ADAPTER/ril_adapter/test/unittest/include",
    "//drivers/adapter/uhdf2/include/hdi",
    "$RIL_ADAPTER/ril_adapter/interfaces/innerkits",
    "//third_party/json/include",
    "//base/telephony/ril_adapter/include",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"HrilTest\"",
    "LOG_DOMAIN = 0xD002B01",
  ]
  deps = [
    "$RIL_ADAPTER/ril_adapter/hril:hril",
    "$RIL_ADAPTER/ril_adapter/hril_hdf:hril_hdf",
    "$RIL_ADAPTER/ril_adapter/vendor:ril_vendor",
    "$hdf_uhdf_path/hdi:libhdi",
    "//base/telephony/core_service/common:libtelephony_common",
    "//drivers/adapter/uhdf2/host:libhdf_host",
    "//drivers/adapter/uhdf2/ipc:libhdf_ipc_adapter",
    "//drivers/adapter/uhdf2/osal:libhdf_utils",
  ]
  external_deps = [
    "appexecfwk_standard:libeventhandler",
    "ipc:ipc_core",
  ]

  public_deps = [ "//utils/native/base:utils" ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  #install_images = [ "vendor" ]

  part_name = "ril_adapter"
  subsystem_name = "telephony"
}
