# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#import("//build/test.gni")
import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
RIL_ADAPTER = "//base/telephony/ril_adapter"

ohos_executable("ril_adapter_test") {
  install_enable = true
  sources = [
    "ril_manager_test.cpp",
    "ril_radio_indication_test.cpp",
    "ril_radio_response_test.cpp",
    "ril_unit_test.cpp",
  ]
  include_dirs = [
    "$RIL_ADAPTER/services/hril/include",
    "$RIL_ADAPTER/test/unittest/include",
    "//drivers/hdf_core/adapter/uhdf2/include/hdi",
    "//third_party/json/include",
    "//base/telephony/ril_adapter/include",
  ]
  configs = [ "$RIL_ADAPTER/utils:utils_config" ]
  defines = [
    "TELEPHONY_LOG_TAG = \"RilAdapterUTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
  deps = [
    "$RIL_ADAPTER/interfaces/innerkits:hril_innerkits",
    "$RIL_ADAPTER/services/hril:hril",
    "$RIL_ADAPTER/services/vendor:ril_vendor",
    "$hdf_uhdf_path/hdi:libhdi",
    "//drivers/hdf_core/adapter/uhdf2/host:libhdf_host",
    "//drivers/hdf_core/adapter/uhdf2/ipc:libhdf_ipc_adapter",
    "//drivers/hdf_core/adapter/uhdf2/utils:libhdf_utils",
  ]
  external_deps = [
    "eventhandler:libeventhandler",
    "ipc:ipc_core",
    "ril_adapter:hril_innerkits",
  ]

  public_deps = [ "//commonlibrary/c_utils/base:utils" ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  #install_images = [ "vendor" ]

  part_name = "ril_adapter"
  subsystem_name = "telephony"
}
