# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#import("//build/test.gni")
import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
RIL_ADAPTER = "//base/telephony/ril_adapter"

ohos_executable("ril_adapter_test") {
  install_enable = true
  sources = [
    "ril_callback_test.cpp",
    "ril_interface_test.cpp",
  ]
  include_dirs = [ "include" ]
  configs = [ "$RIL_ADAPTER/utils:utils_config" ]
  defines = [
    "TELEPHONY_LOG_TAG = \"RilAdapterUTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
  deps = []
  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "drivers_interface_ril:libril_proxy_1.0",
      "hdf_core:libhdf_utils",
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_single",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  external_deps += [ "ipc:ipc_single" ]

  #install_images = [ chipset_base_dir ]

  part_name = "ril_adapter"
  subsystem_name = "telephony"
}
