# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
SUBSYSTEM_DIR = "../../../.."
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("SimStkProactiveNotifyFuzzTest") {
  module_output_path = "ril_adapter/ril_adapter"
  module_out_path = module_output_path
  fuzz_config_file =
      "$SUBSYSTEM_DIR/ril_adapter/test/fuzztest/simstkproactivenotify_fuzzer"
  include_dirs = [ "$SUBSYSTEM_DIR/ril_adapter/services/hril/include" ]

  configs = [ "$SUBSYSTEM_DIR/ril_adapter/utils:utils_config" ]

  deps = [
    "$SUBSYSTEM_DIR/ril_adapter/interfaces/innerkits:hril_innerkits",
    "$SUBSYSTEM_DIR/ril_adapter/services/hril:hril",
  ]

  external_deps = [
    "drivers_interface_power:libpower_proxy_1.2",
    "drivers_interface_ril:ril_idl_headers",
    "hdf_core:libhdf_host",
    "hdf_core:libhdf_ipc_adapter",
    "hdf_core:libpub_utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"RilAdapterFuzzTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "simstkproactivenotify_fuzzer.cpp" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":SimStkProactiveNotifyFuzzTest",
  ]
}
###############################################################################
