# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

RIL_ADAPTER = "//base/telephony/ril_adapter"

ohos_unittest("tel_ril_adapter_gtest") {
  install_enable = true
  subsystem_name = "telephony"
  part_name = "ril_adapter"
  test_module = "tel_ril_adapter_gtest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "ril_manager_test.cpp",
    "ril_radio_indication_test.cpp",
    "ril_radio_response_test.cpp",
    "ril_unit_test.cpp",
  ]

  include_dirs = [
    "//base/telephony/ril_adapter/services/hril/include",
    "//commonlibrary/c_utils/base/include",
    "//third_party/json/include",
    "//drivers/hdf_core/adapter/uhdf2/include/hdi",
    "include",
  ]
  configs = [ "$RIL_ADAPTER/utils:utils_config" ]
  deps = [
    "$RIL_ADAPTER/services/hril:hril",
    "$RIL_ADAPTER/services/vendor:ril_vendor",
    "$hdf_uhdf_path/hdi:libhdi",
    "//drivers/hdf_core/adapter/uhdf2/host:libhdf_host",
    "//drivers/hdf_core/adapter/uhdf2/ipc:libhdf_ipc_adapter",
    "//drivers/hdf_core/adapter/uhdf2/utils:libhdf_utils",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_ril:ril_idl_headers",
    "eventhandler:libeventhandler",
    "ipc:ipc_core",
    "ril_adapter:hril_innerkits",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"RilAdapterGtest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
  if ("${product_name}" == "rk3568" || "${product_name}" == "DAYU") {
    defines += [ "TEL_TEST_UNSUPPORT" ]
    #   defines += [ "TEL_TEST_PIN_PUK" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}

group("unittest") {
  testonly = true
  deps = [ ":tel_ril_adapter_gtest" ]
}
