# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

ohos_unittest("tel_ril_adapter_gtest") {
  install_enable = true
  subsystem_name = "telephony"
  part_name = "ril_adapter"
  test_module = "tel_ril_adapter_gtest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "ril_callback_test.cpp",
    "ril_interface_test.cpp",
    "zero_branch_test.cpp",
  ]

  include_dirs = [
    "include",
    "//base/telephony/ril_adapter/services/hril/include",
    "//base/telephony/ril_adapter/services/hril_hdf/include",
  ]
  deps = [
    "//base/telephony/ril_adapter/services/hril:hril",
    "//base/telephony/ril_adapter/services/hril_hdf:hril_hdf",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"RilAdapterGtest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  # defines += [ "TEL_TEST_PIN_PUK" ]
  configs = [ "//base/telephony/ril_adapter/utils:utils_config" ]
  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "drivers_interface_power:libpower_proxy_1.0",
      "drivers_interface_ril:libril_proxy_1.0",
      "hdf_core:libhdf_utils",
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_single",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  external_deps += [ "ipc:ipc_single" ]
}

group("unittest") {
  testonly = true
  deps = [ ":tel_ril_adapter_gtest" ]
}
