# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
SOURCE_DIR = "../../../"

ohos_unittest("tel_ril_adapter_gtest") {
  install_enable = true
  subsystem_name = "telephony"
  part_name = "ril_adapter"
  test_module = "tel_ril_adapter_gtest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "ril_call_test.cpp",
    "ril_callback_test.cpp",
    "ril_data_test.cpp",
    "ril_modem_test.cpp",
    "ril_network_test.cpp",
    "ril_sim_test.cpp",
    "ril_sms_test.cpp",
    "ril_test_util.cpp",
    "zero_branch_test.cpp",
  ]

  include_dirs = [
    "include",
    "$SOURCE_DIR/services/hril/include",
    "$SOURCE_DIR/services/hril_hdf/include",
  ]
  deps = [
    "$SOURCE_DIR/interfaces/innerkits:hril_innerkits",
    "$SOURCE_DIR/services/hril:hril",
    "$SOURCE_DIR/services/hril_hdf:hril_hdf",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"RilAdapterGtest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  # defines += [ "TEL_TEST_PIN_PUK" ]
  configs = [ "$SOURCE_DIR/utils:utils_config" ]
  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "drivers_interface_power:libpower_proxy_1.2",
      "drivers_interface_ril:libril_proxy_1.2",
      "drivers_interface_ril:libril_proxy_1.3",
      "hdf_core:libhdf_utils",
      "hilog:libhilog",
      "init:libbegetutil",
      "ipc:ipc_single",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  external_deps += [ "ipc:ipc_single" ]
  if (defined(global_parts_info) &&
      defined(global_parts_info.hdf_drivers_interface_power) &&
      global_parts_info.hdf_drivers_interface_power) {
    external_deps += [ "drivers_interface_power:libpower_proxy_1.2" ]
    defines += [ "ABILITY_POWER_SUPPORT" ]
  }
}

group("unittest") {
  testonly = true
  deps = [ ":tel_ril_adapter_gtest" ]
}
